--- a/teste.css
+++ b/teste.css
@@ -65,22 +65,22 @@ a:hover{
 }
 
 .bichin1,.bichin2,.bichin3{
-    margin-top: 600px;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     border: solid white 2px;
     margin: 40px;
+    margin-top: 400px;
     border-radius: 5px;
-
 
 }
 
 .number{
     width: 220px;
-    height: 50px;
+    height: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -95,15 +95,13 @@ a:hover{
     justify-content: center;
     background-color: rgb(252, 236, 207);
     
-
 }
-
-
 
 .listarodape{
     display: flex;
     flex-direction: row;
-    
+    justify-content: center;
+    background-color: rgb(255, 247, 232);
 
 }
 
@@ -126,18 +124,21 @@ a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px;
+    margin: 17px;
     margin-right: 0px;
     padding: 20px;
-    color: black;
+    color: rgb(0, 0, 0);
 
 }
 
 .info02{
-    margin: 40px;
+    margin: 17px;
     margin-left: 0px;
     padding: 20px;
-    color: black;
     border: none;
     border-left: solid black 1px;
+}
+
+.textocard{
+
 }
